Create UI Working

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -84,16 +84,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1gL-bo-Yx5">
-                                <rect key="frame" x="20" y="223" width="374" height="211"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1gL-bo-Yx5">
+                                <rect key="frame" x="20" y="214" width="374" height="628"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.90000000000000002" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="1gL-bo-Yx5" firstAttribute="top" secondItem="8A8-zK-9TX" secondAttribute="bottom" constant="20" id="3jR-16-x3c"/>
                             <constraint firstItem="1gL-bo-Yx5" firstAttribute="leading" secondItem="797-Jk-xcG" secondAttribute="leading" constant="20" id="44d-5P-V5z"/>
@@ -101,6 +100,7 @@
                             <constraint firstItem="797-Jk-xcG" firstAttribute="trailing" secondItem="1gL-bo-Yx5" secondAttribute="trailing" constant="20" id="R2h-YT-OO3"/>
                             <constraint firstItem="8A8-zK-9TX" firstAttribute="top" secondItem="797-Jk-xcG" secondAttribute="top" constant="20" id="kBS-Yi-D7O"/>
                             <constraint firstItem="797-Jk-xcG" firstAttribute="trailing" secondItem="8A8-zK-9TX" secondAttribute="trailing" constant="20" id="tZ9-Ug-Mg3"/>
+                            <constraint firstItem="797-Jk-xcG" firstAttribute="bottom" secondItem="1gL-bo-Yx5" secondAttribute="bottom" constant="20" id="taW-ML-6d6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="797-Jk-xcG"/>
                     </view>
