--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -16,35 +16,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="80" id="dUY-Xd-jQF" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="80"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="100" id="dUY-Xd-jQF" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dUY-Xd-jQF" id="jW4-sp-IG4">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XFN-Ha-Sd8">
-                                            <rect key="frame" x="20" y="11" width="250" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFe-tS-8L5">
-                                            <rect key="frame" x="278" y="11" width="116" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFe-tS-8L5">
+                                            <rect key="frame" x="357" y="11" width="37" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="ujx-L8-iZY"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgF-7r-iY0">
-                                            <rect key="frame" x="20" y="40" width="374" height="40"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgF-7r-iY0">
+                                            <rect key="frame" x="20" y="46" width="374" height="43"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XFN-Ha-Sd8">
+                                            <rect key="frame" x="20" y="11" width="337" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="FlE-xe-IlZ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="sFe-tS-8L5" firstAttribute="trailing" secondItem="jW4-sp-IG4" secondAttribute="trailingMargin" id="1kq-gF-G0F"/>
+                                        <constraint firstItem="bgF-7r-iY0" firstAttribute="bottom" secondItem="jW4-sp-IG4" secondAttribute="bottomMargin" id="HxE-ua-P7j"/>
+                                        <constraint firstItem="bgF-7r-iY0" firstAttribute="leading" secondItem="jW4-sp-IG4" secondAttribute="leadingMargin" id="RxC-HC-Kff"/>
+                                        <constraint firstItem="sFe-tS-8L5" firstAttribute="leading" relation="lessThanOrEqual" secondItem="XFN-Ha-Sd8" secondAttribute="trailing" id="Swp-Gf-kp3"/>
+                                        <constraint firstItem="bgF-7r-iY0" firstAttribute="top" secondItem="XFN-Ha-Sd8" secondAttribute="bottom" constant="5" id="T4i-TN-Jz3"/>
+                                        <constraint firstItem="bgF-7r-iY0" firstAttribute="trailing" secondItem="jW4-sp-IG4" secondAttribute="trailingMargin" id="cQ5-ol-gGi"/>
+                                        <constraint firstItem="sFe-tS-8L5" firstAttribute="top" secondItem="jW4-sp-IG4" secondAttribute="topMargin" id="dVf-1D-lne"/>
+                                        <constraint firstItem="XFN-Ha-Sd8" firstAttribute="top" secondItem="jW4-sp-IG4" secondAttribute="topMargin" id="lDm-NS-tlJ"/>
+                                        <constraint firstItem="XFN-Ha-Sd8" firstAttribute="leading" secondItem="jW4-sp-IG4" secondAttribute="leadingMargin" id="ov5-1p-gHg"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="dateLabel" destination="sFe-tS-8L5" id="Von-Uw-82W"/>
