Outlet for segmentedControl

--- a/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
+++ b/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
@@ -123,6 +123,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="moodPicker" destination="nil-pH-976" id="guv-F0-lOo"/>
                         <outlet property="textView" destination="wF9-3r-UJ8" id="XJw-E7-ypf"/>
                         <outlet property="titleField" destination="78R-eI-Adr" id="ZoP-8O-yG3"/>
                     </connections>
