--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -110,25 +110,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XB3-rU-C9C">
-                                <rect key="frame" x="20" y="162" width="374" height="537.5"/>
+                                <rect key="frame" x="20" y="201" width="374" height="537.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K4r-Zc-TBK">
-                                <rect key="frame" x="20" y="105" width="374" height="34"/>
+                                <rect key="frame" x="20" y="144" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="ua8-gT-KW1">
+                                <rect key="frame" x="20" y="98" width="374" height="32"/>
+                                <segments>
+                                    <segment title="🙁"/>
+                                    <segment title="😐"/>
+                                    <segment title="🙂"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="K4r-Zc-TBK" firstAttribute="top" secondItem="ua8-gT-KW1" secondAttribute="bottom" constant="15" id="1o4-Xe-IgG"/>
+                            <constraint firstItem="ua8-gT-KW1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="BC5-ZN-FFf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="K4r-Zc-TBK" secondAttribute="trailing" constant="20" id="EbC-Lh-sN3"/>
-                            <constraint firstItem="K4r-Zc-TBK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="17" id="SGz-Hg-Kax"/>
                             <constraint firstItem="XB3-rU-C9C" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.6" id="U9w-wg-Guq"/>
                             <constraint firstItem="K4r-Zc-TBK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="XiA-id-WtN"/>
                             <constraint firstItem="XB3-rU-C9C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Zyz-D5-mWh"/>
+                            <constraint firstItem="ua8-gT-KW1" firstAttribute="width" secondItem="K4r-Zc-TBK" secondAttribute="width" id="mN8-Xq-Ar8"/>
+                            <constraint firstItem="ua8-gT-KW1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="n2k-Qc-xYA"/>
                             <constraint firstItem="XB3-rU-C9C" firstAttribute="top" secondItem="K4r-Zc-TBK" secondAttribute="bottom" constant="23" id="oco-pz-V0m"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XB3-rU-C9C" secondAttribute="trailing" constant="20" id="vIe-X3-qWY"/>
                         </constraints>
