Added IBOutlet for the mood segmented control

--- a/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
@@ -149,6 +149,7 @@
                     <connections>
                         <outlet property="entryTextField" destination="QVc-Xc-UFq" id="21K-Y3-dly"/>
                         <outlet property="entryTextView" destination="UGl-Du-Ui1" id="HMI-NN-jSs"/>
+                        <outlet property="moodControl" destination="uy4-oj-wNW" id="AgD-hd-ZUY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xLR-5f-iiO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
