Added new modal version + mood + setted default segmented to middle mood

--- a/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal Core Data/Journal Core Data/Storyboards/Base.lproj/Main.storyboard
@@ -95,8 +95,9 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="jkM-Rf-cbe">
                                 <rect key="frame" x="20" y="108" width="374" height="269"/>
                                 <subviews>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="uy4-oj-wNW">
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="uy4-oj-wNW">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <segments>
                                             <segment title="🙁"/>
                                             <segment title="😐"/>
