part one complete

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                     <outlet property="descriptionLabel" destination="3TC-Qm-tDc" id="wZy-5S-Mdd"/>
                                     <outlet property="timeStampLabel" destination="wyH-gN-r57" id="I45-3c-Cal"/>
                                     <outlet property="titleLabel" destination="UyS-0o-94W" id="y9E-3u-2h8"/>
-                                    <segue destination="iTg-nj-4jm" kind="presentation" identifier="EntryDetailModalSegue" trigger="accessoryAction" modalPresentationStyle="fullScreen" id="x3r-NY-IgP"/>
+                                    <segue destination="iTg-nj-4jm" kind="presentation" identifier="EntryDetailModalSegue" modalPresentationStyle="fullScreen" id="EH5-h1-F2E"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -186,6 +186,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="x3r-NY-IgP"/>
+        <segue reference="EH5-h1-F2E"/>
     </inferredMetricsTieBreakers>
 </document>
